<resources>
    <string name="app_name">Reservas</string>
    <string name="lbl_reserva">Reservas CUC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="retypePassword">Repita la Contraseña</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="registro">¡Registrate!</string>
    <string name="title_activity_principal">Principal</string>

    <string name="title_section1">Administrar Escenarios</string>
    <string name="title_section2">Administrar Usuarios</string>
    <string name="title_section3">Reportes</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_fragment1">Escenarios</string>
    <string name="title_activity_fragment2">Fragment2</string>
    <string name="title_activity_fragment3">Fragment3</string>
    <string name="title_activity_registrar__usuario">Registrar Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="administrador">¿Es Administrador?</string>
    <string name="facultad">Facultad</string>
    <string name="programa">Programa</string>
    <string name="cedula">Cedula</string>
    <string name="email">Email</string>
    <string name="si">Si</string>
    <string name="no">No</string>

    <string name="ubicacion">Ubicacion</string>
    <string name="imagen">Imagen</string>
    <string name="guardar">Guardar</string>

    <string name="error0">Faltan Datos Por Llenar</string>
    <string name="error1">Las Contraseñas no Coinciden</string>
    <string name="error2">Se ha Producido un Error al Guardar</string>

    <string name="inf0">Registro Guardado</string>
</resources>
